tooling/nargo_cli/tests/snapshots/execution_failure/dynamic_index_zero_sized_element_read_failure/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds, array has size 4, but index was 10
   ┌─ src/main.nr:11:13
   │
11 │     let _ = arr[i];
   │             ------
   │
   = Call stack:
     1: main
             at src/main.nr:11:13

Failed assertion
